--- a/vjezba62-react/src/index.css
+++ b/vjezba62-react/src/index.css
@@ -17,7 +17,7 @@ form button {
   font-size: 1.8rem;
   border: none;
   outline: none;
-  background: #fff;
+  background: #eee;
   display: inline-block;
   padding: 1rem;
 }
