--- a/vjezba64-react/src/index.css
+++ b/vjezba64-react/src/index.css
@@ -63,3 +63,87 @@ button {
   cursor: pointer;
   border-radius: 5px;
 }
+
+.stats {
+  width: 80%;
+  margin: 3rem auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.stats p {
+  background-color: blanchedalmond;
+  padding: 1.5rem;
+  border: 1px solid black;
+}
+
+form {
+  margin: auto;
+}
+
+.input-forma {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1rem;
+}
+
+input[type="text"] {
+  padding: 8px;
+  height: 2.3rem;
+  border: none;
+  outline: none;
+}
+
+.btn-primary {
+  bottom: 0;
+  height: 2.3rem;
+  font-size: 1.1rem;
+  padding: 0 1rem;
+}
+
+.ocjena {
+  list-style: none;
+  display: flex;
+  gap: 2rem;
+}
+
+.form-control {
+  display: grid;
+  grid-template-columns: 1rem auto;
+  gap: 0.5rem;
+  font-weight: bold;
+  line-height: 1.4;
+}
+
+input[type="radio"] {
+  appearance: none;
+  background-color: crimson;
+  margin: 0;
+  color: #fff;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  transform: translateY(2px);
+  display: grid;
+  place-content: center;
+}
+
+input[type="radio"]::before {
+  content: "";
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 100%;
+  transform: scale(0);
+  transition: 0.1s transform ease-in-out;
+  box-shadow: inset 1rem 1rem #fff;
+}
+
+input[type="radio"]:checked::before {
+  transform: scale(1);
+}
+
+input[type="radio"]:focus {
+  outline: max(2px, 0.15rem) solid black;
+  outline-offset: max(2px, 0.15rem);
+}
